Added SBOM generation using --sbom CLI option.